--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -1,1 +1,53 @@
-<p>user-registration-form works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Sign up!</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form>
+      <mat-form-field>
+        <input
+          matInput
+          [(ngModel)]="userData.Username"
+          placeholder="Username"
+          type="text"
+          name="Username"
+          required
+        />
+      </mat-form-field>
+      <mat-form-field>
+        <input
+          matInput
+          [(ngModel)]="userData.Password"
+          placeholder="Password"
+          type="password"
+          name="Password"
+          required
+        />
+      </mat-form-field>
+      <mat-form-field>
+        <input
+          matInput
+          [(ngModel)]="userData.Email"
+          placeholder="Email"
+          type="email"
+          name="Email"
+          required
+        />
+      </mat-form-field>
+      <mat-form-filed>
+        <input
+          matInput
+          [(ngModle)]="userData.Birthday"
+          placeholder="Birthday"
+          type="date"
+          name="Birthday"
+        />
+      </mat-form-filed>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button (click)="registerUser()" color="primary">
+      Sign up
+    </button>
+  </mat-card-actions>
+</mat-card>
