--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <div class="main-page">
   <h1>Welcome to myFlix!</h1>
   <button
-    Mat-raised-button
+    mat-raised-button
     (click)="openUserRegistrationDialog()"
     style="margin-right: 10px"
     color="primary"
