--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <mat-card>
   <mat-card-header>
     <mat-card-title>Sign up!</mat-card-title>
@@ -7,7 +8,7 @@
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userdata.username"
+          [(ngModel)]="userData.Username"
           placeholder="Username"
           type="text"
           name="Username"
@@ -17,7 +18,7 @@
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userdata.password"
+          [(ngModel)]="userData.Password"
           placeholder="Password"
           type="password"
           name="Password"
@@ -27,7 +28,7 @@
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userdata.email"
+          [(ngModel)]="userData.Email"
           placeholder="Email"
           type="email"
           name="Email"
@@ -37,7 +38,7 @@
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userdata.birthday"
+          [(ngModel)]="userData.Birthday"
           placeholder="Birthday"
           type="date"
           name="Birthday"
