--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -4,7 +4,7 @@
   </mat-card-header>
   <mat-card-content>
     <form>
-      <mat-form-field>
+      <mat-form-field appearance="fill">
         <input
           matInput
           [(ngModel)]="userData.Username"
@@ -14,7 +14,7 @@
           required
         />
       </mat-form-field>
-      <mat-form-field>
+      <mat-form-field appearance="fill">
         <input
           matInput
           [(ngModel)]="userData.Password"
@@ -24,7 +24,7 @@
           required
         />
       </mat-form-field>
-      <mat-form-field>
+      <mat-form-field appearance="fill">
         <input
           matInput
           [(ngModel)]="userData.Email"
@@ -34,7 +34,7 @@
           required
         />
       </mat-form-field>
-      <mat-form-field>
+      <mat-form-field appearance="fill">
         <input
           matInput
           [(ngModel)]="userData.Birthday"
