--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,9 @@
     Sign up!
   </button>
   <button mat-raised-button color="primary">Login</button>
+  <!-- <mat-form-field appearance="outline">
+    <mat-label>Test</mat-label>
+    <input matInput [(ngModel)]="testInput" />
+  </mat-form-field>
+  <p>you input {{ testInput }}</p> -->
 </div>
