--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,6 +1,18 @@
-<mat-card *ngFor="let movie of movies; let i = index">
-  <mat-dialog-content>
-    <mat-card-title>{{ movie.Title }}</mat-card-title>
-    <mat-card-subtitle><img src="{{ movie.Image }}" /></mat-card-subtitle>
-  </mat-dialog-content>
-</mat-card>
+<div style="display: flex">
+  <mat-card *ngFor="let movie of movies" style="flex: 1 1 auto">
+    <mat-card-header>
+      <mat-card-title>{{ movie.Title }}</mat-card-title>
+      <mat-card-subtitle
+        >Directed by: {{ movie.Directorname }}</mat-card-subtitle
+      >
+    </mat-card-header>
+    <img src="{{ movie.Image }}" alt="{{ movie.Title }}" />
+    <mat-card-actions>
+      <button mat-button color="primary">Genre</button>
+
+      <button mat-button color="primary">Director</button>
+      <button mat-button color="primary">Synopsis</button>
+      <button><mat-icon>favorite_border</mat-icon></button>
+    </mat-card-actions>
+  </mat-card>
+</div>
