attempt 1 @ profile view

--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -1,1 +1,10 @@
-<p>profile-view works!</p>
+<div class="profileView">
+  <h1>Profile</h1>
+  <button
+    mat-raised-button
+    (click)="openProfileEditComponent()"
+    style="margin-right: 10px"
+  >
+    Edit Details
+  </button>
+</div>
