--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -1,5 +1,6 @@
 <div class="profileView">
   <h1>Profile</h1>
+  <h2>Welcome {{ userData.Username }}</h2>
   <button
     mat-raised-button
     (click)="openProfileEditComponent()"
