--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -8,4 +8,13 @@
   >
     Edit Details
   </button>
+  <!-- <button mat-raised-button (click)="loadFavoriteMovies()" onclick="">
+    See Favorite Movies
+  </button> -->
+  <div>
+    <mat-card *ngFor="let movie of favoriteMovies" class="movie-card">
+      <mat-card-title>{{ movie.Title }}</mat-card-title>
+      <!-- <img [src]="movie.img" /> -->
+    </mat-card>
+  </div>
 </div>
