--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,5 +1,5 @@
 <div style="display: flex">
-  <mat-card *ngFor="let movie of movies" style="flex: 1 1 auto">
+  <mat-card *ngFor="let movie of movies" style="flex: 1 1 auto; width: 250px">
     <mat-card-header>
       <mat-card-title>{{ movie.Title }}</mat-card-title>
       <mat-card-subtitle
@@ -8,7 +8,9 @@
     </mat-card-header>
     <img src="{{ movie.Image }}" alt="{{ movie.Title }}" />
     <mat-card-actions>
-      <button mat-button color="primary">Genre</button>
+      <button mat-button color="primary" (click)="openGenreDialog(movie)">
+        Genre
+      </button>
       <button mat-button color="primary">Director</button>
       <button mat-button color="primary">Synopsis</button>
       <button><mat-icon>favorite_border</mat-icon></button>
