--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -8,9 +8,9 @@
   >
     Edit Details
   </button>
-  <!-- <button mat-raised-button (click)="loadFavoriteMovies()" onclick="">
+  <button mat-raised-button (click)="loadFavoriteMovies()" onclick="">
     See Favorite Movies
-  </button> -->
+  </button>
   <div>
     <mat-card *ngFor="let movie of favoriteMovies" class="movie-card">
       <mat-card-title>{{ movie.Title }}</mat-card-title>
