--- a/src/app/genre-info/genre-info.component.html
+++ b/src/app/genre-info/genre-info.component.html
@@ -1,1 +1,4 @@
-<mat-card-title>{{ genre.Name }}</mat-card-title>
+<div class="genre-dialog">
+  <mat-card-title>{{ data?.Name }}</mat-card-title>
+  <mat-card-subtitle>{{ data?.Description }}</mat-card-subtitle>
+</div>
