--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -3,12 +3,12 @@
     <mat-card-header>
       <mat-card-title>{{ movie.Title }}</mat-card-title>
       <mat-card-subtitle
-        >Directed by: {{ movie.Directorname }}</mat-card-subtitle
+        >Directed by: {{ movie.Director.Name }}</mat-card-subtitle
       >
     </mat-card-header>
     <img src="{{ movie.Image }}" alt="{{ movie.Title }}" />
     <mat-card-actions>
-      <button mat-button color="primary" (click)="openGenreDialog(movie)">
+      <button mat-button color="primary" (click)="openGenreDialog(movie.Genre)">
         Genre
       </button>
       <button mat-button color="primary">Director</button>
