--- a/src/app/genre-info/genre-info.component.scss
+++ b/src/app/genre-info/genre-info.component.scss
@@ -1,3 +1,10 @@
 .genre-dialog {
-  margin: 8px;
+  margin: 10px;
+}
+
+.close-button {
+  display: flex;
+  justify-self: flex-end;
+  color: red;
+  margin-right: 20px;
 }
