--- a/src/app/director-info/director-info.component.scss
+++ b/src/app/director-info/director-info.component.scss
@@ -2,6 +2,12 @@
   margin: 10px;
 }
 
+.title {
+  font-size: x-large;
+  font-weight: 475;
+  text-decoration: underline;
+}
+
 .close-button {
   display: flex;
   justify-self: flex-end;
