--- a/src/app/genre-info/genre-info.component.html
+++ b/src/app/genre-info/genre-info.component.html
@@ -1,5 +1,5 @@
 <div class="genre-dialog">
-  <mat-card-title>{{ data?.Name }}</mat-card-title>
+  <mat-card-title class="title">{{ data?.Name }}</mat-card-title>
   <mat-card-subtitle>{{ data?.Description }}</mat-card-subtitle>
   <button (click)="closeDialog()" class="close-button">Close</button>
 </div>
