--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -18,7 +18,9 @@
       >
         Director
       </button>
-      <button mat-button color="primary">Synopsis</button>
+      <button mat-button color="primary" (click)="openSynopsisDialog(movie)">
+        Synopsis
+      </button>
       <button><mat-icon>favorite_border</mat-icon></button>
     </mat-card-actions>
   </mat-card>
