--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div style="display: flex">
   <mat-card *ngFor="let movie of movies" style="flex: 1 1 auto; width: 250px">
     <mat-card-header>
