--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,14 +1,14 @@
 <app-navbar></app-navbar>
 
-<div style="display: flex">
-  <mat-card *ngFor="let movie of movies" style="flex: 1 1 auto; width: 250px">
-    <mat-card-header>
+<div class="movie-grid">
+  <mat-card *ngFor="let movie of movies" class="movie-card">
+    <mat-card-header class="header">
       <mat-card-title>{{ movie.Title }}</mat-card-title>
       <mat-card-subtitle
         >Directed by: {{ movie.Director.Name }}</mat-card-subtitle
       >
     </mat-card-header>
-    <img src="{{ movie.Image }}" alt="{{ movie.Title }}" />
+    <img src="{{ movie.Image }}" alt="{{ movie.Title }}" class="image" />
     <mat-card-actions>
       <button mat-button color="primary" (click)="openGenreDialog(movie.Genre)">
         Genre
