--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,12 +6,12 @@
     <mat-list-item class="navbar-actions">
       <a routerLink="/movies" class="link">Movies</a>
     </mat-list-item>
-    <mat-list-item class="navbar-actions">
+    <!-- <mat-list-item class="navbar-actions">
       <a routerLink="/genres" class="link">Genres</a>
     </mat-list-item>
     <mat-list-item class="navbar-actions">
       <a routerLink="/directors" class="link">Directors</a>
-    </mat-list-item>
+    </mat-list-item> -->
     <mat-list-item class="navbar-actions">
       <a routerLink="/users" class="link">Profile</a>
     </mat-list-item>
