attempt to make favorite button - not working

--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -23,7 +23,7 @@
       <button mat-button color="primary" (click)="openSynopsisDialog(movie)">
         Synopsis
       </button>
-      <button (click)="executeToggleFavorite()">
+      <button (click)="executeToggleFavorite(movie)">
         <mat-icon>favorite_border</mat-icon>
       </button>
     </mat-card-actions>
