--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -4,9 +4,7 @@
   <mat-card *ngFor="let movie of movies" class="movie-card">
     <mat-card-header class="header">
       <mat-card-title>{{ movie.Title }}</mat-card-title>
-      <mat-card-subtitle
-        >Directed by: {{ movie.Director.Name }}</mat-card-subtitle
-      >
+      <mat-card-subtitle>Starring: {{ movie.LeadActor }}</mat-card-subtitle>
     </mat-card-header>
     <img src="{{ movie.Image }}" alt="{{ movie.Title }}" class="image" />
     <mat-card-actions>
