--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -3,11 +3,13 @@
 <div class="movie-grid">
   <mat-card *ngFor="let movie of movies" class="movie-card">
     <mat-card-header class="header">
-      <mat-card-title>{{ movie.Title }}</mat-card-title>
-      <mat-card-subtitle>Starring: {{ movie.LeadActor }}</mat-card-subtitle>
+      <mat-card-title class="title">{{ movie.Title }}</mat-card-title>
+      <mat-card-subtitle class="starring"
+        >Starring: {{ movie.LeadActor }}</mat-card-subtitle
+      >
     </mat-card-header>
     <img src="{{ movie.Image }}" alt="{{ movie.Title }}" class="image" />
-    <mat-card-actions>
+    <mat-card-actions class="actions">
       <button mat-button color="primary" (click)="openGenreDialog(movie.Genre)">
         Genre
       </button>
