--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -13,9 +13,20 @@
   <button mat-raised-button (click)="loadFavoriteMovies()" onclick="">
     See Favorite Movies
   </button>
-  <div>
+  <div class="movie-grid">
     <mat-card *ngFor="let movie of favoriteMovies" class="movie-card">
-      <mat-card-title>{{ movie.Title }}</mat-card-title>
+      <mat-card-header class="header">
+        <mat-card-title class="title">{{ movie.Title }}</mat-card-title>
+        <mat-card-subtitle class="starring"
+          >Starring: {{ movie.LeadActor }}</mat-card-subtitle
+        >
+      </mat-card-header>
+      <img src="{{ movie.Image }}" alt="{{ movie.Title }}" class="image" />
+      <mat-card-actions class="actions">
+        <button (click)="executeToggleFavorite(movie)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </mat-card-actions>
     </mat-card>
   </div>
 </div>
