--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -24,7 +24,9 @@
         Synopsis
       </button>
       <button (click)="executeToggleFavorite(movie)">
-        <mat-icon>favorite_border</mat-icon>
+        <mat-icon>
+          {{ movie.icon }}
+        </mat-icon>
       </button>
     </mat-card-actions>
   </mat-card>
