--- a/src/app/profile-view/profile-view.component.scss
+++ b/src/app/profile-view/profile-view.component.scss
@@ -9,6 +9,10 @@ $large-screen: 1200px;
   flex-basis: 30%;
 }
 
+.user-info {
+  font-size: large;
+}
+
 .movie-card {
   flex: 1 1 auto;
   width: 19%;
