--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar id="toolbar">
-  <!-- <div class="navbar-logo">
-      <img src="#" />
-    </div> -->
+  <div>
+    <button mat-flat-button routerLink="/movies" class="logo">myFlix!</button>
+  </div>
   <div style="width: 100%">
     <button mat-button routerLink="/movies" class="navbar-actions">
       Movies
