--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -7,21 +7,27 @@ $large-screen: 1200px;
   display: flex;
   flex-wrap: wrap;
   flex-basis: 30%;
+  row-gap: 15px;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
 }
 
 .movie-card {
   flex: 1 1 auto;
-  width: 19%;
-  max-width: 20%;
-  margin: 0.5%;
+  width: 24%;
+  max-width: 24%;
+  margin-right: 0.5%;
+  margin-left: 0.5%;
+  margin-top: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.8);
 }
 
 .title {
-  font-size: x-large;
+  font-size: xx-large;
 }
 
 .starring {
-  font-size: medium;
+  font-size: large;
   text-decoration: overline;
 }
 
@@ -30,14 +36,20 @@ $large-screen: 1200px;
   flex-wrap: wrap;
 }
 
-@media screen and (max-width: $large-screen) {
-  .movie-card {
-    width: 24%;
-    max-width: 24%;
-  }
+.action-button {
+  border: 2px solid black;
+  margin: 2px;
+  box-shadow: 1px 2px black;
 }
 
-@media only screen and (max-width: $medium-screen) {
+.image {
+  padding-right: 10px;
+  padding-left: 10px;
+  margin-bottom: auto;
+  max-height: 70%;
+}
+
+@media screen and (max-width: $large-screen) {
   .movie-card {
     width: 32%;
     max-width: 32%;
@@ -53,18 +65,9 @@ $large-screen: 1200px;
 
 @media screen and (max-width: $phone-screen) {
   .movie-card {
-    width: 98%;
-    max-width: 98%;
+    width: 100%;
+    max-width: 100%;
   }
-}
-
-.image {
-  padding-right: 10px;
-  padding-left: 10px;
-  margin-bottom: auto;
-  border: 2px;
-  border-color: black;
-  max-height: 75%;
 }
 
 .header {
