--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -9,13 +9,13 @@
     <button
       mat-raised-button
       (click)="openProfileEditComponent()"
-      style="margin-right: 10px"
+      style="margin-right: 10px; margin-bottom: 3px"
     >
       Edit Details
     </button>
   </div>
   <div class="favorite-movies">
-    <h2>Favorite Movies</h2>
+    <h2 id="subtitle">Favorite Movies</h2>
     <div class="movie-grid">
       <mat-card *ngFor="let movie of favoriteMovies" class="movie-card">
         <mat-card-header class="header">
