--- a/src/app/profile-view/profile-view.component.scss
+++ b/src/app/profile-view/profile-view.component.scss
@@ -5,12 +5,17 @@ $large-screen: 1200px;
 
 .profile {
   justify-self: center;
-  padding: 5px 20px 10px 20px;
+  padding: 5px 20px 0px 20px;
   max-width: max-content;
   border: 2px solid black;
   border-radius: 10%;
   box-shadow: 5px 5px black;
   margin-top: 5px;
+}
+
+#subtitle {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .favorite-movies {
