--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,18 +1,16 @@
 <div class="main-page">
-  <h1>Welcome to myFlix!</h1>
+  <h1 id="welcome">Welcome to <span id="myFlix">myFlix!</span></h1>
   <button
+    class="welcome-button"
     mat-raised-button
     (click)="openUserRegistrationDialog()"
-    style="margin-right: 10px"
-    color="primary"
   >
     Sign up!
   </button>
   <button
+    class="welcome-button"
     mat-raised-button
     (click)="openUserLoginDialog()"
-    style="margin-right: 10px"
-    color="primary"
   >
     Login
   </button>
