--- a/src/app/welcome-page/welcome-page.component.scss
+++ b/src/app/welcome-page/welcome-page.component.scss
@@ -1,3 +1,25 @@
 .main-page {
-  background-color: aliceblue;
+  height: 70%;
+  align-content: center;
+  justify-items: center;
+}
+
+#welcome {
+  margin: 10px;
+  font-size: 50px;
+}
+
+#myFlix {
+  border: 2px solid blue;
+  padding: 3px 20px 3px 20px;
+  border-radius: 35px;
+  background-color: blue;
+  color: white;
+}
+
+.welcome-button {
+  border: 2px solid black;
+  box-shadow: 5px 5px black;
+  margin: 10px;
+  font-size: x-large;
 }
